# aims

./: .gitignore  README.md  SPECIFICATION.md  pyproject.toml
src/openattribution/: __init__.py
src/openattribution/aims/: __init__.py  did.py  manifest.py  store.py
src/openattribution/aims/crypto/: __init__.py
src/openattribution/aims/layers/: __init__.py  content_access.py  deployment.py  foundation.py
tests/: __init__.py  test_did.py  test_manifest.py
